RESOLVED FIXED303558
[blocks-in-inline] Fix fast/block/inside-inlines/margins-pushing-below-float.html
https://bugs.webkit.org/show_bug.cgi?id=303558
Summary [blocks-in-inline] Fix fast/block/inside-inlines/margins-pushing-below-float....
alan
Reported 2025-12-04 09:51:12 PST
ssia
Attachments
[fast-cq]Patch (3.31 KB, patch)
2025-12-04 09:54 PST, alan
no flags
alan
Comment 1 2025-12-04 09:54:02 PST
Created attachment 477613 [details] [fast-cq]Patch
EWS
Comment 2 2025-12-04 13:16:02 PST
Committed 303932@main (463ab93ab2c4): <https://commits.webkit.org/303932@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477613 [details].
Radar WebKit Bug Importer
Comment 3 2025-12-04 13:17:13 PST
Note You need to log in before you can comment on or make changes to this bug.