[blocks-in-inline] Fix fast/block/inside-inlines/margins-pushing-below-float.html https://bugs.webkit.org/show_bug.cgi?id=303558

Reviewed by Antti Koivisto.

See comment in LineBuilder::placeInlineAndFloatContent.

* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::placeInlineAndFloatContent):

Canonical link: https://commits.webkit.org/303932@main